# localsolarforecast

./: .dockerignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.github/workflows/: docker-ghcr.yml
app/: main.py
app/api/: clearsky.py  estimate.py
app/core/: config.py  logging.py  metrics.py  refresh.py  security.py
app/models/: schemas.py  site.py  spec.py
app/services/: cache.py  calibration.py  forecast_engine.py  warmup.py  weather_open_meteo.py
app/util/: timeindex.py  units.py
tests/: test_api_contract.py  test_engine_basics.py  test_rate_limit.py  test_time_and_sanity.py
