[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-forecast-local"
version = "0.3.0"
description = "Local Forecast.Solar-compatible API for Home Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Local Solar Forecast" }]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.7,<3",
  "pvlib>=0.10,<0.12",
  "pandas>=2.2,<3",
  "numpy>=1.26",
  "pytz>=2024.1",
  "httpx>=0.27,<1",
  "redis>=5,<6",
  "prometheus-client>=0.17,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
